--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,50 @@
+#language: r
+#sudo: false
+#cache: packages
+#
+##r:
+##  - oldrel
+##  - release
+##  - devel
+#
+#before_script:
+#  - jdk_switcher use oraclejdk8
+#
+##r_packages:
+##  - rJava
+#
+##dist: trusty
+#
+##addons:
+##  apt:
+##    packages:
+##      - oracle-java8-installer
+
 language: r
 sudo: false
 cache: packages
 
-#r:
-#  - oldrel
-#  - release
-#  - devel
+branches:
+  except:
+    - /^*-v[0-9]/
+
+r_packages:
+  - covr
+  - drat
+  - devtools
 
 before_script:
-  - jdk_switcher use oraclejdk8
+  - export PKG_NAME=$(Rscript -e 'cat(paste0(devtools::as.package(".")$package))')
+  - export PKG_TARBALL=$(Rscript -e 'pkg <- devtools::as.package("."); cat(paste0(pkg$package,"_",pkg$version,".tar.gz"))')
 
-#r_packages:
-#  - rJava
+after_success:
+  - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && perl compare_versions --tag && bash deploy.sh && curl --data "build=true" -X POST https://registry.hub.docker.com/u/ohdsi/broadsea-methodslibrary/trigger/f0b51cec-4027-4781-9383-4b38b42dd4f5/
+  - travis_wait 30 Rscript -e 'library(covr);codecov()'
 
-#dist: trusty
-
-#addons:
-#  apt:
-#    packages:
-#      - oracle-java8-installer
+notifications:
+  recipients:
+    - msuchard@gmail.com
+    - schuemie@ohdsi.org
+  email:
+    on_success: change
+    on_failure: change
