--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -67,16 +67,16 @@ jobs:
           remotes::install_cran("rcmdcheck")
         shell: Rscript {0}
 
-      - name: Unset java
-        run: |
-          unset JAVA_TOOL_OPTIONS
-        shell: bash
-
-      - name: set environment variables
-        uses: allenevans/set-env@v1.0.0
-        with:
-          JAVA_TOOL_OPTIONS: ''
-
+#      - name: Unset java
+#        run: |
+#          unset JAVA_TOOL_OPTIONS
+#        shell: bash
+#
+#      - name: set environment variables
+#        uses: allenevans/set-env@v1.0.0
+#        with:
+#          JAVA_TOOL_OPTIONS: ''
+#
 #      - name: Check
 #        env:
 #          _R_CHECK_CRAN_INCOMING_REMOTE_: false
@@ -88,8 +88,9 @@ jobs:
         env:
           _R_CHECK_CRAN_INCOMING_REMOTE_: false
         run: |
-          unset JAVA_TOOL_OPTIONS
-          Rscript -e 'rcmdcheck::rcmdcheck(args = c("--no-manual", "--as-cran"), error_on = "warning", check_dir = "check")'
+          Sys.unsetenv("JAVA_TOOL_OPTIONS")
+          rcmdcheck::rcmdcheck(args = c("--no-manual", "--as-cran"), error_on = "warning", check_dir = "check")
+        shell: Rscript {0}
 
       - name: Upload check results
         if: failure()
