--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -20,7 +20,7 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - {os: windows-latest, r: 'release'}
+          - {os: windows-latest, r: 'release'}  # Does not appear to have rJava
           - {os: macOS-latest, r: 'release'}
           - {os: ubuntu-20.04, r: 'release', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
           - {os: ubuntu-20.04, r: 'devel', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
@@ -67,22 +67,11 @@ jobs:
           remotes::install_cran("rcmdcheck")
         shell: Rscript {0}
 
-#      - name: Unset java
-#        run: |
-#          unset JAVA_TOOL_OPTIONS
-#        shell: bash
-#
-#      - name: set environment variables
-#        uses: allenevans/set-env@v1.0.0
-#        with:
-#          JAVA_TOOL_OPTIONS: ''
-#
-#      - name: Check
-#        env:
-#          _R_CHECK_CRAN_INCOMING_REMOTE_: false
-#          JAVA_TOOL_OPTIONS : ""
-#        run: rcmdcheck::rcmdcheck(args = c("--no-manual", "--as-cran"), error_on = "warning", check_dir = "check")
-#        shell: Rscript {0}
+      - name: Install rJava
+        if: runner.os == 'Windows'
+        run: |
+          install.packages("rJava")
+        shell: Rscript {0}
 
       - name: Check
         env:
