--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: BeastJar
 Type: Package
-Title: JAR Dependency for MCMC Using BEAST
+Title: JAR Dependency for MCMC Using 'BEAST'
 Version: 1.10.5
 Authors@R: c(
     person("Marc A.", "Suchard", email = "msuchard@ucla.edu", role = c("aut","cre","cph")),
@@ -8,12 +8,13 @@ Authors@R: c(
     person("Alexei J.", "Drummond", role = "cph")
     )
 Description: Provides JAR to perform Markov chain Monte Carlo (MCMC) inference using
-    the popular Bayesian Evolutionary Analysis by Sampling Trees (BEAST) software library.
-    BEAST supports auto-tuning Metropolis-Hastings, slice, Hamiltonian Monte Carlo
-    and Sequential Monte Carlo sampling for a large variety of composable standard and
-    phylogenetic statistical models using high performance computing.  By placing the
-    BEAST JAR in this package, we offer an efficient distribution system for BEAST use
-    by other R packages using CRAN.
+    the popular Bayesian Evolutionary Analysis by Sampling Trees 'BEAST' software library
+    of Suchard et al (2018) <doi:10.1093/ve/vey016>. 'BEAST' supports auto-tuning
+    Metropolis-Hastings, slice, Hamiltonian Monte Carlo and Sequential Monte Carlo
+    sampling for a large variety of composable standard and phylogenetic statistical
+    models using high performance computing.  By placing the 'BEAST' JAR in this package,
+    we offer an efficient distribution system for 'BEAST' use by other R packages using
+    CRAN.
 License: Apache License 2.0
 Encoding: UTF-8
 LazyData: true
