BEAST X has new Arguments package

--- a/extras/build.xml
+++ b/extras/build.xml
@@ -138,6 +138,7 @@
             <include name="dr/util/**"/>
             <include name="dr/xml/**"/>
             <include name="dr/geo/**"/>
+            <include name="dr/app/util/**"/>
             <exclude name="dr/evomodel/antigenic/phyloclustering/**"/>
             <!-- complie JUnit test classes -->
            <!-- <include name="test/dr/**"/>-->
@@ -193,6 +194,7 @@
                 <include name="dr/util/**/*.class"/>
                 <include name="dr/xml/**/*.class"/>
                 <include name="dr/geo/**/*.class"/>
+                <include name="dr/app/util/**"/>
             </fileset>
             <!-- <fileset dir="">
                 <include name="images/*.png"/>
